# plain_word

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
docs/: project.md  style.md
entity/: Cargo.toml
entity/src/: chapters.rs  lib.rs  tags.rs  users.rs  word_tags.rs  wordbooks.rs  words.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260121_000001_create_tables.rs
server/: Cargo.toml  build.rs
server/src/: auth.rs  config.rs  db.rs  error.rs  handlers.rs  import.rs  main.rs  routes.rs  state.rs  static_files.rs
server/src/auth/: password.rs  session.rs
server/src/handlers/: auth_handler.rs  chapter_handler.rs  export_handler.rs  import_handler.rs  tag_handler.rs  word_handler.rs  wordbook_handler.rs
server/src/import/: data.rs  error.rs  parser_excel.rs  parser_json.rs  parser_xml.rs  template.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.vue  main.ts  style.css
web/src/api/: client.ts  error.ts
web/src/components/: AppHeader.vue  WordCard.vue
web/src/i18n/: en.ts  index.ts  zh-CN.ts
web/src/router/: index.ts
web/src/stores/: auth.ts  wordbook.ts
web/src/types/: index.ts
web/src/views/: ChapterView.vue  HomeView.vue  LoginView.vue  RegisterView.vue  SettingsView.vue  TagsView.vue  WordbookView.vue  WordbooksView.vue
