[package]
name = "migration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm-migration.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }