[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
axum-extra = { workspace = true, features = ["multipart"] }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
tower-sessions-sqlx-store.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
argon2.workspace = true
uuid.workspace = true
validator.workspace = true
chrono.workspace = true
rust-embed = "8"
mime_guess = "2"
calamine = "0.28"
rust_xlsxwriter = "0.82"
quick-xml = { version = "0.37", features = ["serialize"] }
entity = { path = "../entity" }
migration = { path = "../migration" }